--- a/style.css
+++ b/style.css
@@ -1,166 +1,191 @@
-body{
-    width:100%;
-    height:100vh;
-    padding:0%;
-    margin:0%;
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #0a0014;
-}
-.first{
-    width:70%;
-    height:70vh;
-    background-color: yellowgreen;
-    display:flex;
-    border-radius: 20px;
-}
-.second{
-    width:30%;
-    height:70vh;
-    border-right: 1px solid #0a0014;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    font-size: 3rem;
-    color:white;
-    font-weight: bold;
-}
-.third{
-    width:70%;
-    height:70vh;
-    background-color: white;
-    border-top-right-radius: 20px;
-    border-bottom-right-radius: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.formContainer{
-    width:70%;
-    display: flex;
-    flex-direction: column;
-}
-.nameContainer{
-   display:flex;
-   justify-content:space-between;
-}
-.input{
-    width:45%;
-    height:6vh;
-    margin-bottom: 2rem;
-    border-radius:10px;
-    outline:none;
-    border:none;
-    padding-left:1rem;
-    background-color: #e7e7e7;
-    color:gray;
-}
-.input1{
-    width:100%;
-    height:6vh;
-    margin-bottom: 2rem;
-    border-radius:10px;
-    outline:none;
-    border:none;
-    padding-left:1rem;
-    background-color: #e7e7e7;
-}
-.buttonContainer{
-    width:100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.button{
-    width:25%;
-    height:5vh;
-    border-radius: 15px;
-    outline:none;
-    border:none;
-    background-color: yellowgreen;
-    color:white;
-    font-weight: bold;
-}
-.button:hover{
-    background-color: rgb(37, 16, 56); 
-}
-.term{
-    width:100%;
-    display: flex;
-    justify-content: center;
-    text-align:center;
-    margin-top:1rem;
-    font-size:15px;
-    color:rgb(84, 35, 131);
-}
-.alert{
-    padding:10px;
-    margin-bottom: 10px;
-    margin-top: 5px;
-    background: #79c879;
-    color:#fff;
-    text-align: center;
-    display:none;
-}
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,400;1,100;1,300&display=swap');
 
 
-@media(max-width:1024px){
-    .firts{
-        flex-direction: column;
-    }
-    .third{
-        border-top-right-radius: 0px;
-        border-bottom-right-radius: 0px;
-        border-bottom-right-radius: 20px;
-        border-bottom-left-radius: 20px;
-    }
-    .second{
-        width:100%;
-        height:20vh;
-        border-bottom: 1px solid #0a0014;
-        font-size: 3rem;
-    }
-    .third{
-        width:100%;
-        height:60vh;
-    }
-    .input{
-        width:40%;
-        height:4vh;
-        font-size: 10px;
-    }
-    .input1{
-        height:4vh;
-        font-size: 10px;
-    }
+.banner-image{
+                 padding-bottom: 0%; 
+                 margin-bottom: 0%;
+                 text-align: center;
+                 color: #f8f8f8;
+                  background-size: cover;
+                  background: url('img/intro-bg_1.jpg');
+                  background-color: #cccccc;
+                   height: 550px;
+                   background-position: center;
+                  background-repeat: no-repeat;
+                 position: relative;
 }
-@media(max-width:530px){
-    .parent{
-        width:80%;
-        height:500px;
-    }
-    .child1{
-        font-size: 2rem;
-        height:250px;
-    }
-    .button{
-        width:45%;
-        height:30px;
-    }
-    .term{
-        font-size:10px;
-    }
-    .input1{
-        width:92%;
-        height:35px;
-    }
-    .child2{
-        height:700px;
-    }
-    .input{
-        height:35px;
-    }
+            
+            .inner-banner{
+                
+                padding-top: 12%;  
+                padding-left: 10%;
+                width:50%;  
+               text-align: center;
+                margin:auto;
+                top: 50%;
+               left: 50%;
+               transform: translate(-50%, -50%);
+                position: absolute;
+                }
+            
+            .banner_content{
+                  position: relative;   
+                  padding-top: 6%;
+                  padding-bottom: 6%;
+                  overflow:hidden;
+                  margin-bottom: 12%;
+                  background-color: rgba(0, 0, 0, 0.7);
+                  max-width: 660px; 
+            }
+            
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins' , sans-serif;
+}
+
+.content{
+    min-height: 660px;
+}
+
+.signup-image{
+    height: 580px;
+}
+
+.btn-signup{
+    display: flex;
+    justify-content: flex-end;
+}
+
+.red{
+    color: red;
+}
+
+.green{
+    color: green;
+}
+
+.size100{
+    font-size: 100px;
+}
+
+.about-h3{
+    font-weight: 390;
+    font-style: oblique;
     
 }
+
+.box-padding-rl{
+    padding: 0px 10Spx;
+}
+
+.box-padding-10{
+    padding: 10px 0px;
+}
+
+.box-padding-left{
+    padding-left: 10px;
+}
+
+.about-p{
+    padding: 20px 0px;
+}
+
+.p-bold{
+    font-weight: 900;
+}
+
+.p-blue{
+    color: blue;
+}
+
+.white{
+    color: #FFF;
+}
+
+.bg-white{
+    background-color: #FFF;
+}
+
+.about-img{
+    margin: 0px auto;
+}
+
+.live-support-img{
+    margin-top: 30px;
+}
+
+.img-phone{
+    height: 200px;
+    margin: 0px auto;
+    transition: 0.7s ease-out;
+}
+
+.img-phone:hover{
+    height: 200px;
+}
+
+.panel-default-setting{
+    border: 1px solid #101010;
+}
+
+.panel-default-setting  > .panel-heading
+ {
+    color: #FFF;
+    background-color: #101010;
+}
+
+.btn-setting{
+    background-color: #000;
+    color: #FFF;
+    transition: 0.5s ease-in;
+}
+
+.btn-setting:hover{
+    background-color:#43053C;
+    color: #FFF;
+}
+
+
+/* Footer */
+footer{
+    background-color: #101010;
+    padding: 10px;
+    color: #9d9d9d;
+    width: 100%;
+    text-align: center;
+}
+
+footer h4{
+    font-size: 20px;
+    color: #fff;
+}
+
+footer a{
+    color: #9d9d9d;
+    text-decoration: none
+}
+
+footer a:hover{
+    color: #fff;
+    text-decoration: none;
+
+}
+/* !Footer */
+
+
+
+/* @media */
+    @media(max-width:991px){
+        .signup-image{
+            display: none;
+        }
+        .live-support-img{
+            display: none;
+        }
+        .about-img{
+            margin: 0px auto;
+        }
+    }
+/* !@media */
